Source/WebKit2/WebProcess/UserContent/WebUserContentController.cpp
@@ -186,7 +186,7 @@ void WebUserContentController::addUserContentExtensions(const Vector<std::pair<S
 {
     for (const auto& userContentExtension : userContentExtensions) {
         WebCompiledContentExtensionData contentExtensionData = userContentExtension.second;
-        RefPtr<WebCompiledContentExtension> compiledContentExtension = WebCompiledContentExtension::create(WTF::move(contentExtensionData.bytecode), WTF::move(contentExtensionData.actions));
+        RefPtr<WebCompiledContentExtension> compiledContentExtension = WebCompiledContentExtension::create(WTF::move(contentExtensionData));
         m_userContentController->addUserContentExtension(userContentExtension.first, compiledContentExtension);
     }
 }
